target_include_directories(${PROJECT_NAME} PUBLIC "liblinkedlist/")
target_include_directories(${PROJECT_NAME} PUBLIC "libbitarray/")
target_include_directories(${PROJECT_NAME} PUBLIC "libstack/")
target_include_directories(${PROJECT_NAME} PUBLIC "libutilities/")

# add_subdirectory(libbitarray)
# add_subdirectory(liblinkedlist)
# add_subdirectory(libstack)
# add_subdirectory(libutilities)